re-distribute manual inspection data

--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
+      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:interactive is False\n",
+      "DEBUG:platform is win32\n",
+      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../analysis')\n",
@@ -13,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Loading files: ['annotated/batch_5_anton.json', 'annotated/batch_5_ayush.json', 'annotated/batch_5_kelly.json', 'annotated/batch_5_rachel.json', 'annotated/batch_5_vinayak.json', 'annotated/batch_5_vishnesh.json', 'annotated/batch_6_anton.json', 'annotated/batch_6_ayush.json', 'annotated/batch_6_kelly.json', 'annotated/batch_6_rachel.json', 'annotated/batch_6_vinayak.json', 'annotated/batch_6_vishnesh.json', 'annotated/batch_7_anton.json', 'annotated/batch_7_ayush.json', 'annotated/batch_7_kelly.json', 'annotated/batch_7_rachel.json', 'annotated/batch_7_vinayak.json', 'annotated/batch_7_vishnesh.json', 'annotated/batch_8_anton.json', 'annotated/batch_8_ayush.json', 'annotated/batch_8_kelly.json', 'annotated/batch_8_rachel.json', 'annotated/batch_8_vinayak.json', 'annotated/batch_8_vishnesh.json', 'annotated/batch_9_anton.json', 'annotated/batch_9_ayush.json', 'annotated/batch_9_kelly.json', 'annotated/batch_9_rachel.json', 'annotated/batch_9_vinayak.json', 'annotated/batch_9_vishnesh.json', 'annotated/batch_10_anton.json', 'annotated/batch_10_ayush.json', 'annotated/batch_10_kelly.json', 'annotated/batch_10_rachel.json', 'annotated/batch_10_vinayak.json', 'annotated/batch_10_vishnesh.json', 'annotated/batch_11_anton.json', 'annotated/batch_11_ayush.json', 'annotated/batch_11_kelly.json', 'annotated/batch_11_rachel.json', 'annotated/batch_11_vinayak.json', 'annotated/batch_11_vishnesh.json']\n",
+      "\n",
+      "INFO:Found users: {'kelly', 'anton', 'vinayak', 'vishnesh', 'ayush', 'rachel'}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Export SimpEval_22 and Simpeval_Ext\n",
     "data = load_data('annotated', batch_num=[5, 6, 7, 8, 9, 10, 11], preprocess=False)\n",
@@ -38,28 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/Human-1-written\n",
       "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/Muss\n",
       "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/T5-11B\n",
       "\n",
-      "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
       "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/Human-2-written\n"
+      "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/Human-1-written\n"
      ]
     }
    ],
@@ -76,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:Loading files: ['annotated/batch_1_anton.json', 'annotated/batch_1_ayush.json', 'annotated/batch_1_kelly.json', 'annotated/batch_2_vinayak.json', 'annotated/batch_2_vishnesh.json', 'annotated/batch_3_anton.json', 'annotated/batch_3_ayush.json', 'annotated/batch_3_kelly.json', 'annotated/batch_4_rachel.json', 'annotated/batch_4_vinayak.json', 'annotated/batch_4_vishnesh.json']\n",
+      "\n",
+      "INFO:Found users: {'kelly', 'anton', 'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found users: {'ayush', 'kelly', 'vinayak', 'vishnesh', 'rachel', 'anton'}\n",
-      "\n",
-      "74: turkcorpus/con_simplification.txt\n",
-      "74: turkcorpus/turk_corpus_random.txt\n",
-      "74: turkcorpus/asset.test.simp\n",
       "74: turkcorpus/T5.txt\n",
-      "74: turkcorpus/asset.test.simp.second\n"
+      "74: turkcorpus/asset.test.simp\n",
+      "74: turkcorpus/asset.test.simp.second\n",
+      "74: turkcorpus/turk_corpus_random.txt\n",
+      "74: turkcorpus/con_simplification.txt\n"
      ]
     }
    ],
@@ -121,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +171,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = simpeval_22 + simpeval_ext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deletes 'annotation' or 'annotations' fields\n",
+    "def delete_annotations(data):\n",
+    "    for s in data:\n",
+    "        if 'annotation' in s.keys():\n",
+    "            del s['annotation']\n",
+    "        if 'annotations' in s.keys():\n",
+    "            del s['annotations']\n",
+    "\n",
     "# Given a user, for each sentence in interwoven,\n",
     "# have the swap the sentence if their annotation in in\n",
     "# the first poistion\n",
@@ -157,11 +206,7 @@
     "                continue\n",
     "            sents = [s for s in sents if s['user'] == user] + [s for s in sents if s['user'] != user]\n",
     "\n",
-    "        for s in sents:\n",
-    "            if 'annotation' in s.keys():\n",
-    "                del s['annotation']\n",
-    "            if 'annotations' in s.keys():\n",
-    "                del s['annotations']\n",
+    "        sents = delete_annotations(sents)\n",
     "\n",
     "        if len(sents) == 1:\n",
     "            sents += [[], []]\n",
@@ -174,8 +219,19 @@
     "            interwoven[i] += [s]\n",
     "    return interwoven\n",
     "\n",
-    "def prepare_adjudiction(data, user=None, batch_size=100):\n",
-    "    interwoven = interweave(data, user=user)\n",
+    "# Prepares original ajudication\n",
+    "def prepare_adjudiction(data, user=None, ids=None, batch_size=100):\n",
+    "    # If the ids are given, simply extract those ids from the data\n",
+    "    if ids is not None:\n",
+    "        interwoven = {}\n",
+    "        for i, id_ in enumerate(ids):\n",
+    "            sents = [s for s in data if s['sentence_id'] == id_]\n",
+    "            for j, s in enumerate(sents):\n",
+    "                if j not in interwoven:\n",
+    "                    interwoven[j] = []\n",
+    "                interwoven[j] += [s]\n",
+    "    else:\n",
+    "        interwoven = interweave(data, user=user)\n",
     "\n",
     "    path = f\"inspection\"\n",
     "    if user is not None:\n",
@@ -188,7 +244,7 @@
     "                if end_idx >= len(interwoven[i]):\n",
     "                    end_idx = len(interwoven[i])\n",
     "\n",
-    "                path = f\"inspection/{user}/batch_{j}\"\n",
+    "                path = f\"inspection/{user}/batch_{j+1}\"\n",
     "                if not os.path.exists(path):\n",
     "                    os.makedirs(path)\n",
     "                with open(f'{path}/set_{i}.json', \"w\") as f:\n",
@@ -202,33 +258,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vinayak: 170\n",
+      "ayush: 187\n",
+      "rachel: 172\n",
+      "vishnesh: 171\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If you are reading this code: lord have mercy on your soul\n",
+    "# 2 design ideas: \n",
+    "    # (1) no annotator fixes spans on an annotations they have seen\n",
+    "    # (2) we remove anton and kelly as annotators\n",
+    "\n",
+    "annotated_sent_id_by_user = {}\n",
+    "for sentence_id in set([s['sentence_id'] for s in data]):\n",
+    "    sents = [s for s in data if s['sentence_id'] == sentence_id]\n",
+    "\n",
+    "    for s in sents:\n",
+    "        if s['user'] not in annotated_sent_id_by_user:\n",
+    "            annotated_sent_id_by_user[s['user']] = []\n",
+    "        annotated_sent_id_by_user[s['user']] += [s['sentence_id']]\n",
+    "\n",
+    "sent_id_by_user = {}\n",
+    "for sentence_id in set([s['sentence_id'] for s in data]):\n",
+    "    sent_id_by_user[sentence_id] = []\n",
+    "    for user in annotated_sent_id_by_user.keys():\n",
+    "        if sentence_id in annotated_sent_id_by_user[user]:\n",
+    "            sent_id_by_user[sentence_id] += [user]\n",
+    "\n",
+    "not_annotated_sent_id_by_user = {}\n",
+    "for user in annotated_sent_id_by_user.keys():\n",
+    "    new_list = []\n",
+    "    for sentence_id in set([s['sentence_id'] for s in data]):\n",
+    "        if sentence_id not in annotated_sent_id_by_user[user]:\n",
+    "            new_list += [sentence_id]\n",
+    "    not_annotated_sent_id_by_user[user] = new_list\n",
+    "\n",
+    "del not_annotated_sent_id_by_user['anton']\n",
+    "del not_annotated_sent_id_by_user['kelly']\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "picked_users = {}\n",
+    "for user in not_annotated_sent_id_by_user.keys():\n",
+    "    picked_users[user] = []\n",
+    "for sentence_id in set([s['sentence_id'] for s in data]):\n",
+    "    candidate_users = [u for u in not_annotated_sent_id_by_user.keys() if sentence_id in not_annotated_sent_id_by_user[u]]\n",
+    "    candidate_users = [u for u in candidate_users if u in not_annotated_sent_id_by_user.keys()]\n",
+    "    if len(candidate_users) == 0:\n",
+    "        raise Exception(f\"No candidate users for sentence {sentence_id}\")\n",
+    "    # user = random.choice(candidate_users)\n",
+    "    user = min(candidate_users, key=lambda u: len(picked_users[u]))\n",
+    "    picked_users[user] += [sentence_id]\n",
+    "    \n",
+    "for user in picked_users.keys():\n",
+    "    print(f\"{user}: {len(picked_users[user])}\")\n",
+    "\n",
+    "sentence_ids_by_user = picked_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# All annotators annotated ~350 sentences\n",
     "# Assign one of those sentences to each annotator - around 117 sentences per annotator. Split into 2 batches\n",
-    "data = simpeval_22 + simpeval_ext\n",
-    "\n",
     "interwoven = {}\n",
-    "for user in set([s['user'] for s in data]):\n",
-    "    interwoven[user] = interweave(data, user=user)\n",
-    "\n",
-    "# TODO : Split algorithm"
+    "for user in sentence_ids_by_user.keys():\n",
+    "    interwoven[user] = prepare_adjudiction(data, user=user, ids=sentence_ids_by_user[user])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Separate each of the three annotations of each sentence\n",
-    "data = simpeval_22 + simpeval_ext\n",
-    "prepare_adjudiction(data)\n",
+    "# Old assignment: Annotators see their own annotations\n",
+    "# data = simpeval_22 + simpeval_ext\n",
+    "# interwoven = {}\n",
+    "# for user in set([s['user'] for s in data]):\n",
+    "#     interwoven[user] = interweave(data, user=user)\n",
     "\n",
-    "for user in set([s['user'] for s in data]):\n",
-    "    prepare_adjudiction(data, user)"
+    "# Old assignment: Separate each of the three annotations of each sentence\n",
+    "# data = simpeval_22 + simpeval_ext\n",
+    "# prepare_adjudiction(data)\n",
+    "# for user in set([s['user'] for s in data]):\n",
+    "#     prepare_adjudiction(data, user)"
    ]
   }
  ],
