remove annotations for edit selection

--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -35,7 +35,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_5_anton.json', 'annotated/batch_5_ayush.json', 'annotated/batch_5_kelly.json', 'annotated/batch_5_rachel.json', 'annotated/batch_5_vinayak.json', 'annotated/batch_5_vishnesh.json', 'annotated/batch_6_anton.json', 'annotated/batch_6_ayush.json', 'annotated/batch_6_kelly.json', 'annotated/batch_6_rachel.json', 'annotated/batch_6_vinayak.json', 'annotated/batch_6_vishnesh.json', 'annotated/batch_7_anton.json', 'annotated/batch_7_ayush.json', 'annotated/batch_7_kelly.json', 'annotated/batch_7_rachel.json', 'annotated/batch_7_vinayak.json', 'annotated/batch_7_vishnesh.json', 'annotated/batch_8_anton.json', 'annotated/batch_8_ayush.json', 'annotated/batch_8_kelly.json', 'annotated/batch_8_rachel.json', 'annotated/batch_8_vinayak.json', 'annotated/batch_8_vishnesh.json', 'annotated/batch_9_anton.json', 'annotated/batch_9_ayush.json', 'annotated/batch_9_kelly.json', 'annotated/batch_9_rachel.json', 'annotated/batch_9_vinayak.json', 'annotated/batch_9_vishnesh.json', 'annotated/batch_10_anton.json', 'annotated/batch_10_ayush.json', 'annotated/batch_10_kelly.json', 'annotated/batch_10_rachel.json', 'annotated/batch_10_vinayak.json', 'annotated/batch_10_vishnesh.json', 'annotated/batch_11_anton.json', 'annotated/batch_11_ayush.json', 'annotated/batch_11_kelly.json', 'annotated/batch_11_rachel.json', 'annotated/batch_11_vinayak.json', 'annotated/batch_11_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'kelly', 'anton', 'vinayak', 'vishnesh', 'ayush', 'rachel'}\n",
+      "INFO:Found users: {'kelly', 'rachel', 'vishnesh', 'anton', 'ayush', 'vinayak'}\n",
       "\n"
      ]
     }
@@ -69,21 +69,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/Human-1-written\n",
       "180: simpeval-22/GPT-3-few-shot\n",
       "180: simpeval-22/GPT-3-zero-shot\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/T5-11B\n",
       "\n",
-      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/T5-11B\n",
       "120: simpeval-ext/Muss\n",
       "120: simpeval-ext/T5-3B\n",
-      "120: simpeval-ext/Human-2-written\n",
-      "120: simpeval-ext/Human-1-written\n"
+      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/T5-11B\n",
+      "120: simpeval-ext/Human-2-written\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_1_anton.json', 'annotated/batch_1_ayush.json', 'annotated/batch_1_kelly.json', 'annotated/batch_2_vinayak.json', 'annotated/batch_2_vishnesh.json', 'annotated/batch_3_anton.json', 'annotated/batch_3_ayush.json', 'annotated/batch_3_kelly.json', 'annotated/batch_4_rachel.json', 'annotated/batch_4_vinayak.json', 'annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'kelly', 'anton', 'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
+      "INFO:Found users: {'kelly', 'rachel', 'vishnesh', 'anton', 'ayush', 'vinayak'}\n",
       "\n"
      ]
     },
@@ -130,11 +130,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74: turkcorpus/T5.txt\n",
-      "74: turkcorpus/asset.test.simp\n",
-      "74: turkcorpus/asset.test.simp.second\n",
       "74: turkcorpus/turk_corpus_random.txt\n",
-      "74: turkcorpus/con_simplification.txt\n"
+      "74: turkcorpus/asset.test.simp.second\n",
+      "74: turkcorpus/asset.test.simp\n",
+      "74: turkcorpus/con_simplification.txt\n",
+      "74: turkcorpus/T5.txt\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
     "                continue\n",
     "            sents = [s for s in sents if s['user'] == user] + [s for s in sents if s['user'] != user]\n",
     "\n",
-    "        sents = delete_annotations(sents)\n",
+    "        delete_annotations(sents)\n",
     "\n",
     "        if len(sents) == 1:\n",
     "            sents += [[], []]\n",
@@ -219,17 +219,23 @@
     "            interwoven[i] += [s]\n",
     "    return interwoven\n",
     "\n",
+    "# Get all three annotations for a sentence\n",
+    "def interweave_ids(data, ids):\n",
+    "    interwoven = {}\n",
+    "    for i, id_ in enumerate(ids):\n",
+    "        sents = [s for s in data if s['sentence_id'] == id_]\n",
+    "        delete_annotations(sents)\n",
+    "        for j, s in enumerate(sents):\n",
+    "            if j not in interwoven:\n",
+    "                interwoven[j] = []\n",
+    "            interwoven[j] += [s]\n",
+    "    return interwoven\n",
+    "\n",
     "# Prepares original ajudication\n",
     "def prepare_adjudiction(data, user=None, ids=None, batch_size=100):\n",
     "    # If the ids are given, simply extract those ids from the data\n",
     "    if ids is not None:\n",
-    "        interwoven = {}\n",
-    "        for i, id_ in enumerate(ids):\n",
-    "            sents = [s for s in data if s['sentence_id'] == id_]\n",
-    "            for j, s in enumerate(sents):\n",
-    "                if j not in interwoven:\n",
-    "                    interwoven[j] = []\n",
-    "                interwoven[j] += [s]\n",
+    "        interwoven = interweave_ids(data, ids)\n",
     "    else:\n",
     "        interwoven = interweave(data, user=user)\n",
     "\n",
@@ -327,9 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-4ac7dabdac95>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msentence_ids_by_user\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0minterwoven\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepare_adjudiction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msentence_ids_by_user\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-fed8f44e20e7>\u001b[0m in \u001b[0;36mprepare_adjudiction\u001b[1;34m(data, user, ids, batch_size)\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[1;31m# If the ids are given, simply extract those ids from the data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mids\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minterweave_ids\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minterweave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-8-fed8f44e20e7>\u001b[0m in \u001b[0;36minterweave_ids\u001b[1;34m(data, ids)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[0msents\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ms\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sentence_id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mid_\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0msents\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdelete_annotations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minterwoven\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m                 \u001b[0minterwoven\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# All annotators annotated ~350 sentences\n",
     "# Assign one of those sentences to each annotator - around 117 sentences per annotator. Split into 2 batches\n",
@@ -340,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
