--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
-      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
-      "DEBUG:interactive is False\n",
-      "DEBUG:platform is win32\n",
-      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
-      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
+    "import copy\n",
     "sys.path.append('../analysis')\n",
     "from utils.all import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +23,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_5_anton.json', 'annotated/batch_5_ayush.json', 'annotated/batch_5_kelly.json', 'annotated/batch_5_rachel.json', 'annotated/batch_5_vinayak.json', 'annotated/batch_5_vishnesh.json', 'annotated/batch_6_anton.json', 'annotated/batch_6_ayush.json', 'annotated/batch_6_kelly.json', 'annotated/batch_6_rachel.json', 'annotated/batch_6_vinayak.json', 'annotated/batch_6_vishnesh.json', 'annotated/batch_7_anton.json', 'annotated/batch_7_ayush.json', 'annotated/batch_7_kelly.json', 'annotated/batch_7_rachel.json', 'annotated/batch_7_vinayak.json', 'annotated/batch_7_vishnesh.json', 'annotated/batch_8_anton.json', 'annotated/batch_8_ayush.json', 'annotated/batch_8_kelly.json', 'annotated/batch_8_rachel.json', 'annotated/batch_8_vinayak.json', 'annotated/batch_8_vishnesh.json', 'annotated/batch_9_anton.json', 'annotated/batch_9_ayush.json', 'annotated/batch_9_kelly.json', 'annotated/batch_9_rachel.json', 'annotated/batch_9_vinayak.json', 'annotated/batch_9_vishnesh.json', 'annotated/batch_10_anton.json', 'annotated/batch_10_ayush.json', 'annotated/batch_10_kelly.json', 'annotated/batch_10_rachel.json', 'annotated/batch_10_vinayak.json', 'annotated/batch_10_vishnesh.json', 'annotated/batch_11_anton.json', 'annotated/batch_11_ayush.json', 'annotated/batch_11_kelly.json', 'annotated/batch_11_rachel.json', 'annotated/batch_11_vinayak.json', 'annotated/batch_11_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'kelly', 'rachel', 'vishnesh', 'anton', 'ayush', 'vinayak'}\n",
+      "INFO:Found users: {'vinayak', 'vishnesh', 'anton', 'ayush', 'rachel', 'kelly'}\n",
       "\n"
      ]
     }
@@ -62,28 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/T5-3B\n",
       "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/Human-2-written\n",
-      "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
       "\n",
-      "120: simpeval-ext/Human-1-written\n",
-      "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Muss\n",
       "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/Human-2-written\n"
+      "120: simpeval-ext/Human-1-written\n",
+      "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
+      "120: simpeval-ext/T5-3B\n"
      ]
     }
    ],
@@ -100,7 +88,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert from old to new annotation data format (list -> dict)\n",
+    "def restructure_annotations(data):\n",
+    "    data = copy.deepcopy(data)\n",
+    "    for sent in data:\n",
+    "        new_anns = {}\n",
+    "        anns = sent['annotations']\n",
+    "        for edit_type in anns.keys():\n",
+    "            new_anns[edit_type] = {}\n",
+    "            for i, ann in enumerate(anns[edit_type]):\n",
+    "                id_ = i\n",
+    "                if ann is not None:\n",
+    "                    new_anns[edit_type][id_] = ann\n",
+    "        sent['annotations'] = new_anns\n",
+    "    return data\n",
+    "\n",
+    "simpeval_22 = restructure_annotations(simpeval_22)\n",
+    "simpeval_ext = restructure_annotations(simpeval_ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +135,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_1_anton.json', 'annotated/batch_1_ayush.json', 'annotated/batch_1_kelly.json', 'annotated/batch_2_vinayak.json', 'annotated/batch_2_vishnesh.json', 'annotated/batch_3_anton.json', 'annotated/batch_3_ayush.json', 'annotated/batch_3_kelly.json', 'annotated/batch_4_rachel.json', 'annotated/batch_4_vinayak.json', 'annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'kelly', 'rachel', 'vishnesh', 'anton', 'ayush', 'vinayak'}\n",
+      "INFO:Found users: {'vinayak', 'vishnesh', 'anton', 'ayush', 'rachel', 'kelly'}\n",
       "\n"
      ]
     },
@@ -132,15 +145,16 @@
      "text": [
       "74: turkcorpus/turk_corpus_random.txt\n",
       "74: turkcorpus/asset.test.simp.second\n",
-      "74: turkcorpus/asset.test.simp\n",
+      "74: turkcorpus/T5.txt\n",
       "74: turkcorpus/con_simplification.txt\n",
-      "74: turkcorpus/T5.txt\n"
+      "74: turkcorpus/asset.test.simp\n"
      ]
     }
    ],
    "source": [
     "# Export the preliminary annotations\n",
     "preliminary = load_data('annotated', batch_num=[1, 2, 3, 4], preprocess=False)\n",
+    "preliminary = restructure_annotations(preliminary)\n",
     "\n",
     "for sent in preliminary:\n",
     "    sent['system'] = sent['system'] \\\n",
@@ -153,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -333,23 +347,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-4ac7dabdac95>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msentence_ids_by_user\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0minterwoven\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepare_adjudiction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msentence_ids_by_user\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-fed8f44e20e7>\u001b[0m in \u001b[0;36mprepare_adjudiction\u001b[1;34m(data, user, ids, batch_size)\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[1;31m# If the ids are given, simply extract those ids from the data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mids\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minterweave_ids\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[0minterwoven\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minterweave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-8-fed8f44e20e7>\u001b[0m in \u001b[0;36minterweave_ids\u001b[1;34m(data, ids)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[0msents\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ms\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sentence_id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mid_\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0msents\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdelete_annotations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minterwoven\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m                 \u001b[0minterwoven\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All annotators annotated ~350 sentences\n",
     "# Assign one of those sentences to each annotator - around 117 sentences per annotator. Split into 2 batches\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
