add adjudicated edit rating task

--- a/data/injestion.ipynb
+++ b/data/injestion.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:matplotlib data path: C:\\Users\\heine\\AppData\\Roaming\\Python\\Python39\\site-packages\\matplotlib\\mpl-data\n",
+      "DEBUG:CONFIGDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:interactive is False\n",
+      "DEBUG:platform is win32\n",
+      "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
+      "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import copy\n",
@@ -14,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +36,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_5_anton.json', 'annotated/batch_5_ayush.json', 'annotated/batch_5_kelly.json', 'annotated/batch_5_rachel.json', 'annotated/batch_5_vinayak.json', 'annotated/batch_5_vishnesh.json', 'annotated/batch_6_anton.json', 'annotated/batch_6_ayush.json', 'annotated/batch_6_kelly.json', 'annotated/batch_6_rachel.json', 'annotated/batch_6_vinayak.json', 'annotated/batch_6_vishnesh.json', 'annotated/batch_7_anton.json', 'annotated/batch_7_ayush.json', 'annotated/batch_7_kelly.json', 'annotated/batch_7_rachel.json', 'annotated/batch_7_vinayak.json', 'annotated/batch_7_vishnesh.json', 'annotated/batch_8_anton.json', 'annotated/batch_8_ayush.json', 'annotated/batch_8_kelly.json', 'annotated/batch_8_rachel.json', 'annotated/batch_8_vinayak.json', 'annotated/batch_8_vishnesh.json', 'annotated/batch_9_anton.json', 'annotated/batch_9_ayush.json', 'annotated/batch_9_kelly.json', 'annotated/batch_9_rachel.json', 'annotated/batch_9_vinayak.json', 'annotated/batch_9_vishnesh.json', 'annotated/batch_10_anton.json', 'annotated/batch_10_ayush.json', 'annotated/batch_10_kelly.json', 'annotated/batch_10_rachel.json', 'annotated/batch_10_vinayak.json', 'annotated/batch_10_vishnesh.json', 'annotated/batch_11_anton.json', 'annotated/batch_11_ayush.json', 'annotated/batch_11_kelly.json', 'annotated/batch_11_rachel.json', 'annotated/batch_11_vinayak.json', 'annotated/batch_11_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'vishnesh', 'anton', 'ayush', 'rachel', 'kelly'}\n",
+      "INFO:Found users: {'rachel', 'vishnesh', 'vinayak', 'anton', 'kelly', 'ayush'}\n",
       "\n"
      ]
     }
@@ -50,28 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180: simpeval-22/GPT-3-few-shot\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/Muss\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
       "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/T5-11B\n",
+      "180: simpeval-22/Human-1-written\n",
+      "180: simpeval-22/GPT-3-few-shot\n",
       "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/T5-11B\n",
+      "180: simpeval-22/Muss\n",
       "\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
+      "120: simpeval-ext/Human-1-written\n",
       "120: simpeval-ext/GPT-3-zero-shot\n",
       "120: simpeval-ext/Muss\n",
-      "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/Human-1-written\n",
+      "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/Human-2-written\n",
-      "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/T5-3B\n"
+      "120: simpeval-ext/T5-11B\n"
      ]
     }
    ],
@@ -88,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +115,8 @@
     "            new_anns[edit_type] = {}\n",
     "            for i, ann in enumerate(anns[edit_type]):\n",
     "                id_ = i\n",
+    "                if edit_type == 'split':\n",
+    "                    id_ += 1\n",
     "                if ann is not None:\n",
     "                    new_anns[edit_type][id_] = ann\n",
     "        sent['annotations'] = new_anns\n",
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +150,7 @@
      "text": [
       "INFO:Loading files: ['annotated/batch_1_anton.json', 'annotated/batch_1_ayush.json', 'annotated/batch_1_kelly.json', 'annotated/batch_2_vinayak.json', 'annotated/batch_2_vishnesh.json', 'annotated/batch_3_anton.json', 'annotated/batch_3_ayush.json', 'annotated/batch_3_kelly.json', 'annotated/batch_4_rachel.json', 'annotated/batch_4_vinayak.json', 'annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'vishnesh', 'anton', 'ayush', 'rachel', 'kelly'}\n",
+      "INFO:Found users: {'rachel', 'vishnesh', 'vinayak', 'anton', 'kelly', 'ayush'}\n",
       "\n"
      ]
     },
@@ -143,11 +158,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74: turkcorpus/turk_corpus_random.txt\n",
       "74: turkcorpus/asset.test.simp.second\n",
+      "74: turkcorpus/asset.test.simp\n",
       "74: turkcorpus/T5.txt\n",
       "74: turkcorpus/con_simplification.txt\n",
-      "74: turkcorpus/asset.test.simp\n"
+      "74: turkcorpus/turk_corpus_random.txt\n"
      ]
     }
    ],
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
